--- a/SpacePowerResource/Areas/Admin/Views/Facilities/Index.cshtml
+++ b/SpacePowerResource/Areas/Admin/Views/Facilities/Index.cshtml
@@ -43,6 +43,9 @@
             @Html.DisplayNameFor(model => model.OccupiedArea)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.FuseValue)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.CurrentKind)
         </th>
         <th>
@@ -79,6 +82,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.OccupiedArea)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FuseValue)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CurrentKind)
