--- a/SpacePowerResource/Areas/Admin/Views/Facilities/Details.cshtml
+++ b/SpacePowerResource/Areas/Admin/Views/Facilities/Details.cshtml
@@ -65,6 +65,13 @@
         <dd>
             @Html.DisplayFor(model => model.OccupiedArea)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.FuseValue)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FuseValue)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.CurrentKind)
