--- a/SpacePowerResource/Areas/Admin/Views/Facilities/Edit.cshtml
+++ b/SpacePowerResource/Areas/Admin/Views/Facilities/Edit.cshtml
@@ -72,6 +72,13 @@
                 @Html.ValidationMessageFor(model => model.OccupiedArea, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.FuseValue, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FuseValue, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FuseValue, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.CurrentKind, htmlAttributes: new { @class = "control-label col-md-2" })
